Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntegerBoolObj.quorum
Boolean b
b:SetValue(true)
integer i = cast(integer, b)
output i