Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjBoolObj.quorum
Boolean b
b:SetValue(true)
Number n = cast(Number, b)